# DPRL-FINAL

./: Method-1-final.ipynb  impl-1.ipynb  method-2-final.ipynb
.github/instructions/: instrcutions-file.instructions.md
lite_genbr_repo/lite_genbr_repo/: .gitignore  README.md  TREE.txt  main.py  params.py  pyproject.toml  requirements.txt
lite_genbr_repo/lite_genbr_repo/lite_genbr/: __init__.py
lite_genbr_repo/lite_genbr_repo/lite_genbr.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lite_genbr_repo/lite_genbr_repo/lite_genbr/clustering/: risk_modes.py
lite_genbr_repo/lite_genbr_repo/lite_genbr/env/: conversions.py  grid.py  obstacles.py
lite_genbr_repo/lite_genbr_repo/lite_genbr/multinash/: cptg.py  frechet.py  implicit_pf.py  multinash_pf.py
lite_genbr_repo/lite_genbr_repo/lite_genbr/planning/: a_star.py  occupancy.py  robot_br.py
lite_genbr_repo/lite_genbr_repo/lite_genbr/psro/: meta_solvers.py  metrics.py  psro.py
lite_genbr_repo/lite_genbr_repo/lite_genbr/sensors/: sensor_br.py  sensor_policy.py  visibility.py
lite_genbr_repo/lite_genbr_repo/lite_genbr/utils/: logging_utils.py  rng.py
lite_genbr_repo/lite_genbr_repo/lite_genbr/viz/: __init__.py  plot_grid.py  plot_outer_game.py  plot_psro.py  plot_trajectories.py
lite_genbr_repo/lite_genbr_repo/tests/: test_a_star.py  test_lp_solver.py  test_visibility.py
