[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lite-genbr"
version = "0.1.0"
description = "Lite Gen-BR (planning PSRO) + 2-robot CPTG + MultiNash-PF (lite)"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lite_genbr*"]
